variables.RunFour.scala.error
Compilation error:
RunFour:5: error: reassignment to val
    Nombre = Nombre+1
           ^