variables.RunFour.scala.code
val Nombre: Int =0
while (Nombre!=4) {
  forward()
  if (isOverBaggle()){
    Nombre = Nombre+1
  }
}